Wed Mar 11 03:56:56 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/client/interceptors/acelog/ACE_Log_Interceptor.cpp:

          . Fixed formatting.

        * MPC/config/cuts_template.mpb:
        * cuts/utils/template/File_Generator.h:
        * cuts/utils/template/File_Generator.inl:
        * cuts/utils/template/File_Generator.cpp:
        * cuts/utils/template/File_Generator_T.cpp:
        * cuts/utils/template/Template_App.cpp:
        * cuts/utils/template/Template_Common_export.h:
        * cuts/utils/template/Template_Config_Handler.h:
        * cuts/utils/template/Template_Config_Handler.inl:
        * cuts/utils/template/Template_Config_Handler.cpp:
        * cuts/utils/template/Template_Config_List_Parser.h:
        * cuts/utils/template/Template_Config_List_Parser.inl:
        * cuts/utils/template/Template_Config_List_Parser.cpp:
        * cuts/utils/template/cutstmpl.cpp:
        * cuts/utils/template/cutstmpl.mpc:

          . Refactored the CUTS template engine project so that it can
            be reused in other CUTS projects that need template configuration
            support.

Wed Mar 11 00:43:50 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/CUTS.smp:

          . Snapshot of CUTS' code metrics.

Wed Mar 11 00:40:46 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CUTS_CoSMIC.mwc:
        * MPC/config/requires_gems.mpb:
        * default.features:

          . Added features to enable/disable GEMS related projects.

Wed Mar 11 00:24:38 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_cosmic.mpb:
        * MDE/GME/T2M/executor/executor.mpc:

          . Build compilation errors - removed CUTS from the project
            dependencies/libraries.

Thu Mar  5 20:49:20 UTC 2009  Pooja Varshneya  <varshneya_p@n1.vanderbilt.edu>

        * cuts/utils/logging/client/interceptors/acelog/ACE_Log_Callback.h: